force-app/main/default/objects/Request__c/fields/StartTime_Identify_OnHoldWaitingonClient__c.field-meta.xml
<CustomField>
    <fullName>StartTime_Identify_OnHoldWaitingonClient__c</fullName>
    <label>StartTime_Identify_OnHoldWaitingonClient</label>
    <type>DateTime</type>
</CustomField>