force-app/main/default/objects/Request__c/fields/StartTime_Level_of_Effort_Complete__c.field-meta.xml
<CustomField>
    <fullName>StartTime_Level_of_Effort_Complete__c</fullName>
    <label>StartTime_Level of Effort Complete</label>
    <type>DateTime</type>
</CustomField>