force-app/main/default/objects/Request__c/fields/StartTime_No_Build_Req__c.field-meta.xml
<CustomField>
    <fullName>StartTime_No_Build_Req__c</fullName>
    <label>StartTime_No Build Req</label>
    <type>DateTime</type>
</CustomField>