force-app/main/default/objects/Request__c/fields/StartTime_Rejected__c.field-meta.xml
<CustomField>
    <fullName>StartTime_Rejected__c</fullName>
    <label>StartTime_Rejected</label>
    <type>DateTime</type>
</CustomField>