force-app/main/default/objects/Request__c/fields/StartTime_SIT__c.field-meta.xml
<CustomField>
    <fullName>StartTime_SIT__c</fullName>
    <label>StartTime_SIT</label>
    <type>DateTime</type>
</CustomField>