force-app/main/default/objects/Request__c/fields/StartTime_Test__c.field-meta.xml
<CustomField>
    <fullName>StartTime_Test__c</fullName>
    <label>StartTime_Test</label>
    <type>DateTime</type>
</CustomField>