force-app/main/default/objects/Request__c/fields/StartTime_Test_Production__c.field-meta.xml
<CustomField>
    <fullName>StartTime_Test_Production__c</fullName>
    <label>StartTime_Test Production</label>
    <type>DateTime</type>
</CustomField>