force-app/main/default/objects/Request__c/fields/StartTime_UAT__c.field-meta.xml
<CustomField>
    <fullName>StartTime_UAT__c</fullName>
    <label>StartTime_UAT</label>
    <type>DateTime</type>
</CustomField>