force-app/main/default/objects/Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the request</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Identify: New Requirement</fullName>
                <default>true</default>
                <label>Identify: New Requirement</label>
            </value>
            <value>
                <fullName>Identify: Submit for Business Review</fullName>
            </value>
            <value>
                <fullName>Identify: Deferred</fullName>
            </value>
            <value>
                <fullName>Consolidate: Approve to Estimate</fullName>
            </value>
            <value>
                <fullName>Consolidate: Level of Effort Complete</fullName>
            </value>
            <value>
                <fullName>Approve: Approved to Deploy</fullName>
            </value>
            <value>
                <fullName>Release: Design</fullName>
            </value>
            <value>
                <fullName>Release: Build</fullName>
            </value>
            <value>
                <fullName>Release: Test</fullName>
            </value>
            <value>
                <fullName>Release: SIT</fullName>
            </value>
            <value>
                <fullName>Release: UAT</fullName>
            </value>
            <value>
                <fullName>Release: Build Production</fullName>
            </value>
            <value>
                <fullName>Release: Test Production</fullName>
            </value>
            <value>
                <fullName>Close: Deployed</fullName>
            </value>
            <value>
                <fullName>Close: Rejected</fullName>
            </value>
            <value>
                <fullName>Close: Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>