force-app/main/default/objects/Request__c/fields/StopTime_Approve_to_Estimate__c.field-meta.xml
<CustomField>
    <fullName>StopTime_Approve_to_Estimate__c</fullName>
    <label>StopTime_Approve to Estimate</label>
    <type>DateTime</type>
</CustomField>