force-app/main/default/objects/Request__c/fields/StopTime_Approved_Emergency_Release__c.field-meta.xml
<CustomField>
    <fullName>StopTime_Approved_Emergency_Release__c</fullName>
    <label>StopTime_Approved Emergency Release</label>
    <type>DateTime</type>
</CustomField>