force-app/main/default/objects/Request__c/fields/StopTime_Approved_to_Deploy__c.field-meta.xml
<CustomField>
    <fullName>StopTime_Approved_to_Deploy__c</fullName>
    <label>StopTime_Approved to Deploy</label>
    <type>DateTime</type>
</CustomField>