force-app/main/default/objects/Request__c/fields/StopTime_Build__c.field-meta.xml
<CustomField>
    <fullName>StopTime_Build__c</fullName>
    <label>StopTime_Build</label>
    <type>DateTime</type>
</CustomField>