force-app/main/default/objects/Request__c/fields/StopTime_Build_Production__c.field-meta.xml
<CustomField>
    <fullName>StopTime_Build_Production__c</fullName>
    <label>StopTime_Build Production</label>
    <type>DateTime</type>
</CustomField>