force-app/main/default/objects/Request__c/fields/StopTime_Deferred__c.field-meta.xml
<CustomField>
    <fullName>StopTime_Deferred__c</fullName>
    <label>StopTime_Deferred</label>
    <type>DateTime</type>
</CustomField>