force-app/main/default/objects/Request__c/fields/StopTime_Deployed__c.field-meta.xml
<CustomField>
    <fullName>StopTime_Deployed__c</fullName>
    <label>StopTime_Deployed</label>
    <type>DateTime</type>
</CustomField>