force-app/main/default/objects/Request__c/fields/StopTime_Design__c.field-meta.xml
<CustomField>
    <fullName>StopTime_Design__c</fullName>
    <label>StopTime_Design</label>
    <type>DateTime</type>
</CustomField>