force-app/main/default/objects/Request__c/fields/StopTime_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>StopTime_Duplicate__c</fullName>
    <label>StopTime_Duplicate</label>
    <type>DateTime</type>
</CustomField>