force-app/main/default/objects/Request__c/fields/StopTime_Emergency_Request__c.field-meta.xml
<CustomField>
    <fullName>StopTime_Emergency_Request__c</fullName>
    <label>StopTime_ Emergency Request</label>
    <type>DateTime</type>
</CustomField>