force-app/main/default/objects/Request__c/fields/StopTime_Identify_Change_Request__c.field-meta.xml
<CustomField>
    <fullName>StopTime_Identify_Change_Request__c</fullName>
    <label>StopTime_Identify: Change Request</label>
    <type>DateTime</type>
</CustomField>