force-app/main/default/objects/Request__c/fields/StopTime_Identify_New_Requirement__c.field-meta.xml
<CustomField>
    <fullName>StopTime_Identify_New_Requirement__c</fullName>
    <label>StopTime_Identify: New Requirement</label>
    <type>DateTime</type>
</CustomField>