force-app/main/default/objects/Request__c/fields/StopTime_Identify_OnHoldWaitingonClient__c.field-meta.xml
<CustomField>
    <fullName>StopTime_Identify_OnHoldWaitingonClient__c</fullName>
    <label>StopTime_Identify_OnHoldWaitingonClient_</label>
    <type>DateTime</type>
</CustomField>