force-app/main/default/objects/Request__c/fields/StopTime_Identify_Submit_for_Business__c.field-meta.xml
<CustomField>
    <fullName>StopTime_Identify_Submit_for_Business__c</fullName>
    <label>StopTime_Identify: Submit for Business</label>
    <type>DateTime</type>
</CustomField>