force-app/main/default/objects/Request__c/fields/StopTime_Level_of_Effort_Complete__c.field-meta.xml
<CustomField>
    <fullName>StopTime_Level_of_Effort_Complete__c</fullName>
    <label>StopTime_Level of Effort Complete</label>
    <type>DateTime</type>
</CustomField>