force-app/main/default/objects/Request__c/fields/StopTime_No_Build_Req__c.field-meta.xml
<CustomField>
    <fullName>StopTime_No_Build_Req__c</fullName>
    <label>StopTime_No Build Req</label>
    <type>DateTime</type>
</CustomField>