force-app/main/default/objects/Request__c/fields/StopTime_Rejected__c.field-meta.xml
<CustomField>
    <fullName>StopTime_Rejected__c</fullName>
    <label>StopTime_Rejected</label>
    <type>DateTime</type>
</CustomField>