force-app/main/default/objects/Request__c/fields/StopTime_SIT__c.field-meta.xml
<CustomField>
    <fullName>StopTime_SIT__c</fullName>
    <label>StopTime_SIT</label>
    <type>DateTime</type>
</CustomField>