force-app/main/default/objects/Request__c/fields/StopTime_Test__c.field-meta.xml
<CustomField>
    <fullName>StopTime_Test__c</fullName>
    <label>StopTime_Test</label>
    <type>DateTime</type>
</CustomField>