force-app/main/default/objects/Request__c/fields/StopTime_Test_Production__c.field-meta.xml
<CustomField>
    <fullName>StopTime_Test_Production__c</fullName>
    <label>StopTime_Test Production</label>
    <type>DateTime</type>
</CustomField>