force-app/main/default/objects/Request__c/fields/StopTime_UAT__c.field-meta.xml
<CustomField>
    <fullName>StopTime_UAT__c</fullName>
    <label>StopTime_UAT</label>
    <type>DateTime</type>
</CustomField>