force-app/main/default/objects/Request__c/fields/System_Impacted__c.field-meta.xml
<CustomField>
    <fullName>System_Impacted__c</fullName>
    <description>Systems which gets impacted from the request</description>
    <inlineHelpText>Systems that get impacted due to this requirement.</inlineHelpText>
    <label>Systems Impacted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Objects</fullName>
            </value>
            <value>
                <fullName>Customer Master Database (CMD)</fullName>
            </value>
            <value>
                <fullName>Enterprise Data Warehouse (EDW)</fullName>
            </value>
            <value>
                <fullName>Outlook</fullName>
            </value>
            <value>
                <fullName>STARS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>No Systems Impacted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>