force-app/main/default/objects/Request__c/fields/Technical_Comments__c.field-meta.xml
<CustomField>
    <fullName>Technical_Comments__c</fullName>
    <inlineHelpText>Place all technical notes related to this requirement in this section.</inlineHelpText>
    <label>Technical Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>