force-app/main/default/objects/Request__c/fields/Technical_Description__c.field-meta.xml
<CustomField>
    <fullName>Technical_Description__c</fullName>
    <description>Technical description of the request</description>
    <label>Technical Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>