force-app/main/default/objects/Request__c/fields/Test_Case__c.field-meta.xml
<CustomField>
    <fullName>Test_Case__c</fullName>
    <description>Test case for the request</description>
    <label>Test Case</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>