force-app/main/default/objects/Request__c/fields/Test_Total__c.field-meta.xml
<CustomField>
    <fullName>Test_Total__c</fullName>
    <description>Estimated Level of Effort (Hours) for testing of the request</description>
    <label>Test Total</label>
    <summarizedField>Application_Inventory__c.Total_Test__c</summarizedField>
    <summaryForeignKey>Application_Inventory__c.Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>