force-app/main/default/objects/Request__c/fields/TimeSpentOn_Approve_to_Estimate__c.field-meta.xml
<CustomField>
    <fullName>TimeSpentOn_Approve_to_Estimate__c</fullName>
    <formula>IF( ISBLANK(StopTime_Approve_to_Estimate__c) ,
	(Now() - StartTime_Approve_to_Estimate__c)*24*60 ,
	(StopTime_Approve_to_Estimate__c - StartTime_Approve_to_Estimate__c)*24*60)</formula>
    <label>Approve to Estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>