force-app/main/default/objects/Request__c/fields/TimeSpentOn_Approved_Emergency_Release__c.field-meta.xml
<CustomField>
    <fullName>TimeSpentOn_Approved_Emergency_Release__c</fullName>
    <formula>IF( ISBLANK(StopTime_Approved_Emergency_Release__c) ,
	(Now() - StartTime_Approved_Emergency_Release__c)*24*60 ,(StopTime_Approved_Emergency_Release__c - StartTime_Approved_Emergency_Release__c)*24*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TimeSpentOn_Approved Emergency Release</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>