force-app/main/default/objects/Request__c/fields/TimeSpentOn_Approved_to_Deploy__c.field-meta.xml
<CustomField>
    <fullName>TimeSpentOn_Approved_to_Deploy__c</fullName>
    <formula>IF( ISBLANK(StopTime_Approved_to_Deploy__c) ,
	(Now() - StartTime_Approved_to_Deploy__c)*24*60 ,(StopTime_Approved_to_Deploy__c - StartTime_Approved_to_Deploy__c)*24*60)</formula>
    <label>Approved to Deploy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>