force-app/main/default/objects/Request__c/fields/TimeSpentOn_Build__c.field-meta.xml
<CustomField>
    <fullName>TimeSpentOn_Build__c</fullName>
    <formula>IF( ISBLANK(StopTime_Build__c) ,
	(Now() - StartTime_Build__c)*24*60 ,(StopTime_Build__c - StartTime_Build__c)*24*60)</formula>
    <label>Build</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>