force-app/main/default/objects/Request__c/fields/TimeSpentOn_Build_Production__c.field-meta.xml
<CustomField>
    <fullName>TimeSpentOn_Build_Production__c</fullName>
    <formula>IF( ISBLANK(StopTime_Build_Production__c) ,
	(Now() - StartTime_Build_Production__c)*24*60 ,(StopTime_Build_Production__c - StartTime_Build_Production__c)*24*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Build Production</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>