force-app/main/default/objects/Request__c/fields/TimeSpentOn_Deferred__c.field-meta.xml
<CustomField>
    <fullName>TimeSpentOn_Deferred__c</fullName>
    <formula>IF( ISBLANK(StopTime_Deferred__c) ,
	(Now() - StartTime_Deferred__c)*24*60 ,(StopTime_Deferred__c - StartTime_Deferred__c)*24*60)</formula>
    <label>Deferred</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>