force-app/main/default/objects/Request__c/fields/TimeSpentOn_Deployed__c.field-meta.xml
<CustomField>
    <fullName>TimeSpentOn_Deployed__c</fullName>
    <formula>IF( ISBLANK(StopTime_Deployed__c) ,
	(Now() - StartTime_Deployed__c)*24*60 ,(StopTime_Deployed__c - StartTime_Deployed__c)*24*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deployed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>