force-app/main/default/objects/Request__c/fields/TimeSpentOn_Design__c.field-meta.xml
<CustomField>
    <fullName>TimeSpentOn_Design__c</fullName>
    <formula>IF( ISBLANK(StopTime_Design__c) ,
	(Now() - StartTime_Design__c)*24*60 ,(StopTime_Design__c - StartTime_Design__c)*24*60)</formula>
    <label>Design</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>