force-app/main/default/objects/Request__c/fields/TimeSpentOn_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>TimeSpentOn_Duplicate__c</fullName>
    <formula>IF( ISBLANK(StopTime_Duplicate__c) ,
	(Now() - StartTime_Duplicate__c)*24*60 ,(StopTime_Duplicate__c - StartTime_Duplicate__c)*24*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duplicate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>