force-app/main/default/objects/Request__c/fields/TimeSpentOn_Emergency_Request__c.field-meta.xml
<CustomField>
    <fullName>TimeSpentOn_Emergency_Request__c</fullName>
    <formula>IF( ISBLANK(StopTime_Emergency_Request__c) ,
	(Now() - StartTime_Emergency_Request__c)*24*60 ,(StopTime_Emergency_Request__c - StartTime_Emergency_Request__c)*24*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TimeSpentOn_Emergency Request</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>