force-app/main/default/objects/Request__c/fields/TimeSpentOn_Identify_Change_Request__c.field-meta.xml
<CustomField>
    <fullName>TimeSpentOn_Identify_Change_Request__c</fullName>
    <formula>IF( ISBLANK(StopTime_Identify_Change_Request__c) ,
	(Now() - StartTime_Identify_Change_Request__c)*24*60 ,(StopTime_Identify_Change_Request__c - StartTime_Identify_Change_Request__c)*24*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TimeSpentOn_Identify Change Request</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>