force-app/main/default/objects/Request__c/fields/TimeSpentOn_Identify_New_Requirement__c.field-meta.xml
<CustomField>
    <fullName>TimeSpentOn_Identify_New_Requirement__c</fullName>
    <formula>IF( ISBLANK(StopTime_Identify_New_Requirement__c) ,
	(Now() - StartTime_Identify_New_Requirement__c)*24*60 , (StopTime_Identify_New_Requirement__c - StartTime_Identify_New_Requirement__c)*24*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identify: New Requirement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>