force-app/main/default/objects/Request__c/fields/TimeSpentOn_Identify_OnHoldWaitingonClie__c.field-meta.xml
<CustomField>
    <fullName>TimeSpentOn_Identify_OnHoldWaitingonClie__c</fullName>
    <label>TimeSpentOn_Identify_OnHoldWaitingonClie</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>