force-app/main/default/objects/Request__c/fields/TimeSpentOn_Level_of_Effort_Complete__c.field-meta.xml
<CustomField>
    <fullName>TimeSpentOn_Level_of_Effort_Complete__c</fullName>
    <formula>IF( ISBLANK(StopTime_Level_of_Effort_Complete__c) ,
	(Now() - StartTime_Level_of_Effort_Complete__c)*24*60 ,(StopTime_Level_of_Effort_Complete__c - StartTime_Level_of_Effort_Complete__c)*24*60)</formula>
    <label>Level of Effort Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>