force-app/main/default/objects/Request__c/fields/TimeSpentOn_No_Build_Req__c.field-meta.xml
<CustomField>
    <fullName>TimeSpentOn_No_Build_Req__c</fullName>
    <formula>IF( ISBLANK(StopTime_No_Build_Req__c) ,
	(Now() - StartTime_No_Build_Req__c)*24*60 ,(StopTime_No_Build_Req__c - StartTime_No_Build_Req__c)*24*60)</formula>
    <label>TimeSpentOn_No Build Req</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>