force-app/main/default/objects/Request__c/fields/TimeSpentOn_Rejected__c.field-meta.xml
<CustomField>
    <fullName>TimeSpentOn_Rejected__c</fullName>
    <formula>IF( ISBLANK(StopTime_Rejected__c) ,
	(Now() - StartTime_Rejected__c)*24*60 ,(StopTime_Rejected__c - StartTime_Rejected__c)*24*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rejected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>