force-app/main/default/objects/Request__c/fields/TimeSpentOn_SIT__c.field-meta.xml
<CustomField>
    <fullName>TimeSpentOn_SIT__c</fullName>
    <formula>IF( ISBLANK(StopTime_SIT__c) ,
	(Now() - StartTime_SIT__c)*24*60 ,(StopTime_SIT__c - StartTime_SIT__c)*24*60)</formula>
    <label>SIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>