force-app/main/default/objects/Request__c/fields/TimeSpentOn_Submit_for_Business_Review__c.field-meta.xml
<CustomField>
    <fullName>TimeSpentOn_Submit_for_Business_Review__c</fullName>
    <formula>IF( ISBLANK(StopTime_Identify_Submit_for_Business__c) ,
	(Now() - StartTime_Identify_Submit_for_Business__c)*24*60 ,(StopTime_Identify_Submit_for_Business__c - StartTime_Identify_Submit_for_Business__c)*24*60)</formula>
    <label>Submit for Business Review</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>