force-app/main/default/objects/Request__c/fields/TimeSpentOn_Test__c.field-meta.xml
<CustomField>
    <fullName>TimeSpentOn_Test__c</fullName>
    <formula>IF( ISBLANK(StopTime_Test__c) ,
	(Now() - StartTime_Test__c)*24*60 ,(StopTime_Test__c - StartTime_Test__c)*24*60)</formula>
    <label>Test</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>