force-app/main/default/objects/Request__c/fields/TimeSpentOn_Test_Production__c.field-meta.xml
<CustomField>
    <fullName>TimeSpentOn_Test_Production__c</fullName>
    <formula>IF( ISBLANK(StopTime_Test_Production__c) ,
	(Now() - StartTime_Test_Production__c)*24*60 ,(StopTime_Test_Production__c - StartTime_Test_Production__c)*24*60)</formula>
    <label>Test Production</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>