force-app/main/default/objects/Request__c/fields/TimeSpentOn_UAT__c.field-meta.xml
<CustomField>
    <fullName>TimeSpentOn_UAT__c</fullName>
    <formula>IF( ISBLANK(StopTime_UAT__c) ,
	(Now() - StartTime_UAT__c)*24*60 ,(StopTime_UAT__c - StartTime_UAT__c)*24*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>