force-app/main/default/objects/Request__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of days.</description>
    <inlineHelpText>Total number of days estimated.</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>