force-app/main/default/objects/Request__c/fields/Total_Actual_Level_of_Effort__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Level_of_Effort__c</fullName>
    <description>Total actual level of effort (in Hours) taken in completing the request (i.e. time taken in plan, design, build, test, UAT, deploy &amp; support)</description>
    <label>Total Actual Level of Effort</label>
    <summarizedField>Actual_Level_of_Effort__c.Total_Actual_Level_of_Effort__c</summarizedField>
    <summaryForeignKey>Actual_Level_of_Effort__c.Requirement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>