force-app/main/default/objects/Request__c/fields/Total_Effort_Variance__c.field-meta.xml
<CustomField>
    <fullName>Total_Effort_Variance__c</fullName>
    <description>Difference in Estimated Level of effort &amp; Actual level of effort</description>
    <formula>Total_Actual_Level_of_Effort__c - TotEst__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Effort Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>