force-app/main/default/objects/Request__c/fields/Total_Estimate_Bottom_Up__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimate_Bottom_Up__c</fullName>
    <description>Total estimated level of effort for build, design &amp; test of the request</description>
    <formula>Build_Total__c + Design_Total__c + Test_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Solution Capacity Estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>