force-app/main/default/objects/Request__c/fields/Total_Priority_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Total_Priority_Ranking__c</fullName>
    <description>Priority ranking of the request based on Business benefit, Urgency of request, User impact &amp; LOE</description>
    <formula>( Business_Benefit_Value__c  +  Urgency_of_Request_Value__c  +  User_Impact_of_Change_Value__c  +  Level_of_Effort_Value__c  )  / 4</formula>
    <label>Total Priority Ranking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>