force-app/main/default/objects/Request__c/fields/TotEst__c.field-meta.xml
<CustomField>
    <fullName>TotEst__c</fullName>
    <description>Total estimated value.</description>
    <formula>( Req__c + Des__c + BUT__c + SIT__c + UAT__c + TrnDep__c + Adapt__c )*
( 1+Cont__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total estimated value.</inlineHelpText>
    <label>Total Estimate (Bottom Up)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>