force-app/main/default/objects/Request__c/fields/TrnDep__c.field-meta.xml
<CustomField>
    <fullName>TrnDep__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of days estimated for Training and Deploying.</description>
    <inlineHelpText>Number of days estimated for Training and Deploying.</inlineHelpText>
    <label>Deploy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>