force-app/main/default/objects/Request__c/fields/UAT__c.field-meta.xml
<CustomField>
    <fullName>UAT__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of days estimated to complete UAT.</description>
    <inlineHelpText>Number of days estimated to complete UAT.</inlineHelpText>
    <label>UAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>