force-app/main/default/objects/Request__c/fields/Urgency_of_Request_Value__c.field-meta.xml
<CustomField>
    <fullName>Urgency_of_Request_Value__c</fullName>
    <description>Value is calculated by the selection of the Urgency of Request field.</description>
    <formula>CASE( 
Urgency_of_Request__c , 
&quot;HIGH&quot; , 3, 
&quot;MEDIUM&quot;, 2, 
&quot;Low&quot;, 1, 
0 
)</formula>
    <inlineHelpText>Value is calculated by the selection of the Urgency of Request field: 
High = 3 
Medium = 2 
Low = 1</inlineHelpText>
    <label>Urgency of Request Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>