force-app/main/default/objects/Request__c/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Use Case</label>
    <referenceTo>Use_Case__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>