force-app/main/default/objects/Request__c/fields/User_Impact_of_Change_Value__c.field-meta.xml
<CustomField>
    <fullName>User_Impact_of_Change_Value__c</fullName>
    <description>Value is calculated by the User Impact of Change field.</description>
    <formula>CASE( 
User_Impact_of_Change__c , 
&quot;High&quot;,1, 
&quot;Medium&quot;,2, 
&quot;Low&quot;, 3, 
0 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Value is calculated by the User Impact of Change field: 
High = 1 
Medium = 2 
Low = 3</inlineHelpText>
    <label>User Impact of Change Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>