force-app/main/default/objects/Request__c/recordTypes/Norfolk_Request.recordType-meta.xml
<RecordType>
    <fullName>Norfolk_Request</fullName>
    <active>true</active>
    <description>Request to be raised with Functional team</description>
    <label>General Request</label>
</RecordType>