force-app/main/default/objects/Request__c/recordTypes/Question.recordType-meta.xml
<RecordType>
    <fullName>Question</fullName>
    <active>true</active>
    <description>Question to be raised with Functional team</description>
    <label>Question</label>
</RecordType>