force-app/main/default/objects/Request__c/validationRules/ClosedDuplicateRelateRequest.validationRule-meta.xml
<ValidationRule>
    <fullName>ClosedDuplicateRelateRequest</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
(ISPICKVAL(Status__c, &quot;Close: Duplicate&quot;)),
(ISBLANK(Related_Request__c))
)</errorConditionFormula>
    <errorDisplayField>Related_Request__c</errorDisplayField>
    <errorMessage>Must Enter Related Request Value</errorMessage>
</ValidationRule>