force-app/main/default/objects/Request__c/validationRules/Positive_Effort.validationRule-meta.xml
<ValidationRule>
    <fullName>Positive_Effort</fullName>
    <active>true</active>
    <description>All numbers entered under level of effort should be positive.</description>
    <errorConditionFormula>OR( Adapt__c &lt; 0,  BUT__c &lt; 0, Des__c &lt; 0, SIT__c &lt; 0, TrnDep__c &lt; 0, UAT__c &lt;0, Req__c &lt;0)</errorConditionFormula>
    <errorMessage>Please enter a value greater than 0 for fields under Total Level of Effort.</errorMessage>
</ValidationRule>