force-app/main/default/objects/Request__c/validationRules/RemovedFromRelease.validationRule-meta.xml
<ValidationRule>
    <fullName>RemovedFromRelease</fullName>
    <active>true</active>
    <description>If Checkbox is checked, removed from release must be populated</description>
    <errorConditionFormula>Removed_Release__c = TRUE &amp;&amp;  Removed_From_Release__c = &quot;&quot;</errorConditionFormula>
    <errorDisplayField>Removed_From_Release__c</errorDisplayField>
    <errorMessage>You must provide the release that the request was removed from.</errorMessage>
</ValidationRule>