force-app/main/default/objects/Request__c/listViews/Account.listView-meta.xml
<ListView>
    <fullName>Account</fullName>
    <columns>NAME</columns>
    <columns>Requirement__c</columns>
    <columns>Mapping__c</columns>
    <columns>Request_Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Capability__c</field>
        <operation>equals</operation>
        <value>Accounts</value>
    </filters>
    <filters>
        <field>Planned_Release__c</field>
        <operation>equals</operation>
        <value>Phase 1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Close: Deployed,Close: Rejected,Close: Duplicate</value>
    </filters>
    <label>Account</label>
</ListView>